fixed pb question too long

--- a/css/question.css
+++ b/css/question.css
@@ -23,6 +23,7 @@
 	margin-left: 50px;
 	margin-bottom: 10px;
 	margin-top: 10px;
+	max-width: 90%;
 }
 
 .question i {
